# fastapi-identity

./: .gitignore  docker-compose.yml  pyproject.toml
src/fastapi_identity/: __init__.py  main.py
src/fastapi_identity/api/: dependencies.py
src/fastapi_identity/api/roues/v1/: auth_routes.py  oauth_routes.py
src/fastapi_identity/core/: database.py  exception_handlers.py  logging.py  problem_details.py  settings.py
src/fastapi_identity/core/exceptions/: __init__.py  auth_exceptions.py
src/fastapi_identity/models/: authorization_code_model.py  client_model.py  user_model.py
src/fastapi_identity/schemas/: client_schemas.py  oauth_schemas.py  user_schemas.py
src/fastapi_identity/security/: claims.py
src/fastapi_identity/services/: authorization_service.py  password_service.py  token_service.py  user_service.py
src/fastapi_identity/stores/: authorization_code_store.py  base.py  client_store.py  sqlmodel.py  user_store.py
